--- a/contact.html
+++ b/contact.html
@@ -78,22 +78,22 @@
             <div class="container">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link " href="index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">About Us</a>
+                        <a class="nav-link " href="about.html">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Find Us</a>
+                        <a class="nav-link" href="#contact_form">Find Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/menu.html">Menus</a>
+                        <a class="nav-link" href="menu.html">Menus</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Gallery</a>
+                        <a class="nav-link" href="gallery.html">Gallery</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact Us</a>
+                        <a class="nav-link active" href="contact.html">Contact Us</a>
                     </li>
                 </ul>
             </div>
@@ -315,14 +315,12 @@
                     <p class="footer_heading">Opening Hours</p>
                     <div class="row">
                         <div class="col-12" style="line-height: 0px">
-                            <p class="opening_days">Tuesday-Sunday</p>
+                            <p class="opening_days">Monday-Sunday</p>
                         </div>
                         <div class="col-12">
                             <p class="opening_timing">5:00pm - Till Late</p>
                         </div>
-                        <div class="col-12">
-                            <p class="close_day">Monday-Closed</p>
-                        </div>
+
                     </div>
                 </div>
             </div>
@@ -332,7 +330,7 @@
                 <div class="col-8">
                     <p class="mt-2">
                         Copyright &copy; 2022 Salva D'or Ristorante Italiano. All Rights
-                        Reserved
+                        Reserved.
                     </p>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
