--- a/about.html
+++ b/about.html
@@ -82,22 +82,22 @@
       <div class="container">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link " href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" href="about.html">About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Find Us</a>
+            <a class="nav-link" href="#contact_form">Find Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/menu.html">Menus</a>
+            <a class="nav-link" href="menu.html">Menus</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="gallery.html">Gallery</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/contact.html">Contact Us</a>
+            <a class="nav-link" href="contact.html">Contact Us</a>
           </li>
         </ul>
       </div>
@@ -105,30 +105,30 @@
   </nav>
 
 
-      <!-- header slider  start -->
+  <!-- header slider  start -->
 
-  
-    <section>
-        <div class="gallery_banner">
-            <div class="main_item">
-                <img src="assets/images/about-slice/banner.png" alt="" />
-                  <div class="container menu">
-                    <div class="carousel-caption">
-                        <h1>About Us</h1>
 
-                    </div>
-                </div>
-            </div>
+  <section>
+    <div class="gallery_banner">
+      <div class="main_item">
+        <img src="assets/images/about-slice/banner.png" alt="" />
+        <div class="container menu">
+          <div class="carousel-caption">
+            <h1>About Us</h1>
+
+          </div>
         </div>
-    </section>
+      </div>
+    </div>
+  </section>
 
-    <!-- header slider  end here -->
- <!-- About us start here -->
+  <!-- header slider  end here -->
+  <!-- About us start here -->
 
   <div class="container" data-aos="fade-up" data-aos-duration="700">
     <div class="about_section about_page">
       <div class="row">
-         <div class="col-lg-5 col-md-5 col-sm-4">
+        <div class="col-lg-5 col-md-5 col-sm-4">
           <div class="about_img">
             <img src="assets/images/about-slice/about-pic.png" alt="" />
           </div>
@@ -162,14 +162,14 @@
             summer dine in and takeaway evenings.
           </p>
         </div>
-       
+
       </div>
       <!-- About us end here -->
     </div>
   </div>
 
 
-    <!-- Testimonials start here  -->
+  <!-- Testimonials start here  -->
 
   <section>
     <div class="testimonials_section">
@@ -484,7 +484,7 @@
   <!-- END OF TESTIMONIALS -->
 
 
-    <!-- Footer start -->
+  <!-- Footer start -->
 
   <div class="footer_section">
     <footer class="container">
@@ -574,14 +574,12 @@
           <p class="footer_heading">Opening Hours</p>
           <div class="row">
             <div class="col-12" style="line-height: 0px">
-              <p class="opening_days">Tuesday-Sunday</p>
+              <p class="opening_days">Monday-Sunday</p>
             </div>
             <div class="col-12">
               <p class="opening_timing">5:00pm - Till Late</p>
             </div>
-            <div class="col-12">
-              <p class="close_day">Monday-Closed</p>
-            </div>
+
           </div>
         </div>
       </div>
@@ -591,7 +589,7 @@
         <div class="col-8">
           <p class="mt-2">
             Copyright &copy; 2022 Salva D'or Ristorante Italiano. All Rights
-            Reserved
+            Reserved.
           </p>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
