--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <body>
   <!-- Top Header section start -->
 
-  <div class="container-fluid mt-3 top_header_section">
+  <div class="container-fluid mt-1 top_header_section">
     <div class="top_header">
       <div class="row">
         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
@@ -357,7 +357,7 @@
               <span><i class="fa fa-pencil"></i> </span>
               <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Message"></textarea>
             </div>
-            <div class="text-center">
+            <div class="text-center form_submit">
               <button>Submit</button>
             </div>
           </div>
@@ -855,14 +855,12 @@
           <p class="footer_heading">Opening Hours</p>
           <div class="row">
             <div class="col-12" style="line-height: 0px">
-              <p class="opening_days">Tuesday-Sunday</p>
+              <p class="opening_days">Monday-Sunday</p>
             </div>
             <div class="col-12">
               <p class="opening_timing">5:00pm - Till Late</p>
             </div>
-            <div class="col-12">
-              <p class="close_day">Monday-Closed</p>
-            </div>
+
           </div>
         </div>
       </div>
@@ -872,7 +870,7 @@
         <div class="col-8">
           <p class="mt-2">
             Copyright &copy; 2022 Salva D'or Ristorante Italiano. All Rights
-            Reserved
+            Reserved.
           </p>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
