--- a/menu.html
+++ b/menu.html
@@ -83,13 +83,13 @@
             <div class="container">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link " href="/">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link " href="index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About Us</a>
+                        <a class="nav-link " href="about.html">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Find Us</a>
+                        <a class="nav-link" href="#contact_form">Find Us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="menu.html">Menus</a>
@@ -128,7 +128,7 @@
 
     <!-- right menu list 1st -->
 
-    <section>
+    <section class="menu_page_section">
         <div class="row">
             <div class="col-lg-2 col-md-2">
 
@@ -294,7 +294,7 @@
                         data-aos="fade-down-left">
                         <div class="right_menu_img">
 
-                            <img src="assets/images/menu_Antipasti.png" alt="" srcset="">
+                            <img src="assets/images/menu-slice/Antipasti.png" alt="" srcset="">
                         </div>
                     </div>
                 </div>
@@ -308,7 +308,7 @@
 
     <!-- left menu list 1st -->
 
-    <section class="left_menu_bg_grey">
+    <section class="left_menu_bg_grey menu_page_section">
         <div class="row">
 
 
@@ -486,7 +486,7 @@
 
     <!-- right menu list 1st -->
 
-    <section>
+    <section class="menu_page_section">
         <div class="row mt-4">
             <div class="col-lg-2 col-md-2">
 
@@ -644,7 +644,7 @@
                         data-aos="zoom-in">
                         <div class="right_menu_img">
 
-                            <img src="assets/images/menu_Antipasti.png" alt="" srcset="">
+                            <img src="assets/images/menu-slice/pizza.png" alt="" srcset="">
                         </div>
                     </div>
                 </div>
@@ -656,7 +656,7 @@
     <!-- right menu list end 1st-->
     <!-- left menu list 1st -->
 
-    <section class="left_menu_bg_grey">
+    <section class="left_menu_bg_grey menu_page_section_gray">
         <div class="row">
 
 
@@ -667,7 +667,7 @@
                         easing="ease-in-sine">
                         <div class="right_menu_img">
 
-                            <img src="assets/images/menu_pasta.png" alt="" srcset="">
+                            <img src="assets/images/Secondi-Piatti.png" alt="" srcset="">
                         </div>
                     </div>
 
@@ -789,7 +789,7 @@
     <!-- left menu list end 1st-->
 
 
-    <section>
+    <section class="menu_page_section">
         <div class="container pt-5 pb-5">
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-12">
@@ -1066,13 +1066,13 @@
                         <span class="line"></span>
                         <p class="footer_heading">Contact Us</p>
                         <div class="row">
-                            <div class="col-lg-12 col-md-12" style="line-height: 0px">
+                            <div class="col-12 number_body" style="line-height: 0px">
                                 <p class="number">
                                     <span> <i class="fa-solid fa-phone-volume mr-2"></i></span>
                                     075788000
                                 </p>
                             </div>
-                            <div class="col-lg-12">
+                            <div class="col-12 email_body">
                                 <p class="email">
                                     <span>
                                         <i class="fa-solid fa-envelope mr-2"></i>
@@ -1089,14 +1089,12 @@
                     <p class="footer_heading">Opening Hours</p>
                     <div class="row">
                         <div class="col-12" style="line-height: 0px">
-                            <p class="opening_days">Tuesday-Sunday</p>
+                            <p class="opening_days">Monday-Sunday</p>
                         </div>
                         <div class="col-12">
                             <p class="opening_timing">5:00pm - Till Late</p>
                         </div>
-                        <div class="col-12">
-                            <p class="close_day">Monday-Closed</p>
-                        </div>
+
                     </div>
                 </div>
             </div>
@@ -1106,7 +1104,7 @@
                 <div class="col-8">
                     <p class="mt-2">
                         Copyright &copy; 2022 Salva D'or Ristorante Italiano. All Rights
-                        Reserved
+                        Reserved.
                     </p>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
@@ -1117,6 +1115,8 @@
                     </div>
                 </div>
             </div>
+
+
         </footer>
     </div>
 
