--- a/gallery.html
+++ b/gallery.html
@@ -148,7 +148,7 @@
             </div>
 
             <div class="text-center pb-5">
-                <a href="/menu.html" class="view_menu_btn">View Full Menus</a>
+                <a href="menu.html" class="view_menu_btn">View Full Menus</a>
 
             </div>
 
