--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                       <div class="col-10">
                         <p class="title">Antipasti e Insalate</p>
                       </div>
-                      <div class="col-2">
+                      <div class="col-2 arrow_footer1">
                         <div class="arrow_div">
                           <a href="/menu.html">
                             <img src="assets/images/arrow1.png" class="arrow" alt="" />
