--- a/about.html
+++ b/about.html
@@ -90,8 +90,16 @@
           <li class="nav-item">
             <a class="nav-link" href="#contact_form">Find Us</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="menu.html">Menus</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+              aria-expanded="false">
+              Menus
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="menu.html">Menus</a>
+              <a class="dropdown-item" href="takeawaymenu.html">Takeaway Menus</a>
+
+            </div>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="gallery.html">Gallery</a>
