--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
   <div class="container-fluid mt-3 top_header_section">
     <div class="top_header">
       <div class="row">
-        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+        <div class="col-4 col-sm-4 col-md-4  col-lg-4">
           <div class="header_contact">
             <div class="">
               <img src="assets/images/call-icon.png" alt="" srcset="" />
@@ -52,13 +52,13 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 header_logo">
+        <div class="col-4 col-sm-4 col-md-4  col-lg-4 header_logo">
           <div class="logo">
             <img src="assets/images/logo.png" alt="" srcset="" />
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+        <div class="col-4 col-sm-4 col-md-4  col-lg-4">
           <div class="social">
             <img src="assets/images/fb.png" alt="" class="social_icon" />
             <img src="assets/images/instagram.png" alt="" class="social_icon" />
@@ -117,14 +117,10 @@
 
 
   <section>
-    <div class="gallery_banner">
+    <div class="gallery_banner sec_content about_banner  ">
       <div class="main_item">
-        <img src="assets/images/about-slice/banner.png" alt="" />
         <div class="container menu">
-          <div class="carousel-caption">
-            <h1>About Us</h1>
-
-          </div>
+          <h1>About Us</h1>
         </div>
       </div>
     </div>
@@ -136,12 +132,12 @@
   <div class="container" data-aos="fade-up" data-aos-duration="700">
     <div class="about_section about_page">
       <div class="row">
-        <div class="col-lg-5 col-md-5 col-sm-4">
+        <div class="col-lg-5 col-md-12">
           <div class="about_img">
             <img src="assets/images/about-slice/about-pic.png" alt="" />
           </div>
         </div>
-        <div class="col-lg-7 col-md-7 col-sm-8">
+        <div class="col-lg-7 col-md-12">
           <div class="separator">
             <h3>Benvenuti al</h3>
             <div class="line"></div>
@@ -169,6 +165,7 @@
             D'or a welcoming and hospitable place, ideal for your winter or
             summer dine in and takeaway evenings.
           </p>
+          <a class="btn_contact_us">Contact Us</a>
         </div>
 
       </div>
@@ -182,7 +179,7 @@
   <section>
     <div class="testimonials_section">
 
-      <img src="assets/images/testimonials.png" alt="" srcset="" class="testimonial_banner">
+      <!-- <img src="assets/images/testimonials.png" alt="" srcset="" class="testimonial_banner"> -->
       <div class="testimonial_body">
         <h1 class="testimonials_heading">Testimonials</h1>
         <div class="slide-container swiper">
@@ -497,13 +494,13 @@
   <div class="footer_section">
     <footer class="container">
       <div class="row">
-        <div class="col-lg-4 col-md-4">
+        <div class="col-lg-4 col-md-6">
           <div class="vertical_line">
             <span class="line"></span>
             <p class="footer_heading">Links</p>
             <div class="row">
               <div class="col-lg-6 col-md-6">
-                <ul>
+                <ul class="mb-0">
                   <li>
                     <span class="mr-1"><img src="assets/images/back.png" class="footer_back_icon" alt="" /></span><a
                       href="#home">Home</a>
@@ -537,7 +534,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-md-3">
+        <div class="col-lg-3 col-md-6">
           <div class="vertical_line">
             <span class="line"></span>
             <p class="footer_heading">Address</p>
@@ -554,7 +551,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-md-3">
+        <div class="col-lg-3 col-md-6">
           <div class="vertical_line">
             <span class="line"></span>
             <p class="footer_heading">Contact Us</p>
@@ -577,7 +574,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-2 col-md-2">
+        <div class="col-lg-2 col-md-6">
           <span class="line"></span>
           <p class="footer_heading">Opening Hours</p>
           <div class="row">
