--- a/gallery.html
+++ b/gallery.html
@@ -36,7 +36,7 @@
     <div class="container-fluid mt-3 top_header_section">
         <div class="top_header">
             <div class="row">
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                <div class="col-4 col-sm-4 col-md-4  col-lg-4">
                     <div class="header_contact">
                         <div class="">
                             <img src="assets/images/call-icon.png" alt="" srcset="" />
@@ -48,13 +48,13 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 header_logo">
+                <div class="col-4 col-sm-4 col-md-4  col-lg-4 header_logo">
                     <div class="logo">
                         <img src="assets/images/logo.png" alt="" srcset="" />
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                <div class="col-4 col-sm-4 col-md-4  col-lg-4">
                     <div class="social">
                         <img src="assets/images/fb.png" alt="" class="social_icon" />
                         <img src="assets/images/instagram.png" alt="" class="social_icon" />
@@ -114,16 +114,16 @@
 
 
     <section>
-        <div class="gallery_banner">
+        <div class="gallery_banner sec_content gallery_img_banner">
             <div class="main_item">
-                <img src="assets/images/gallery-slice/banner.png" alt="" />
-                <div class="container menu">
-                    <div class="carousel-caption">
-                        <h1>Gallery</h1>
 
-                    </div>
+                <div class="container menu">
+
+                    <h1>Gallery</h1>
+
                 </div>
             </div>
+        </div>
         </div>
     </section>
 
@@ -167,17 +167,16 @@
 
 
     <!-- Footer start -->
-
     <div class="footer_section">
         <footer class="container">
             <div class="row">
-                <div class="col-lg-4 col-md-4">
+                <div class="col-lg-4 col-md-6">
                     <div class="vertical_line">
                         <span class="line"></span>
                         <p class="footer_heading">Links</p>
                         <div class="row">
                             <div class="col-lg-6 col-md-6">
-                                <ul>
+                                <ul class="mb-0">
                                     <li>
                                         <span class="mr-1"><img src="assets/images/back.png" class="footer_back_icon"
                                                 alt="" /></span><a href="#home">Home</a>
@@ -211,7 +210,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-3">
+                <div class="col-lg-3 col-md-6">
                     <div class="vertical_line">
                         <span class="line"></span>
                         <p class="footer_heading">Address</p>
@@ -228,7 +227,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-3">
+                <div class="col-lg-3 col-md-6">
                     <div class="vertical_line">
                         <span class="line"></span>
                         <p class="footer_heading">Contact Us</p>
@@ -251,7 +250,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-2 col-md-2">
+                <div class="col-lg-2 col-md-6">
                     <span class="line"></span>
                     <p class="footer_heading">Opening Hours</p>
                     <div class="row">
@@ -286,6 +285,7 @@
 
         </footer>
     </div>
+
 
 
 
