--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 <body>
   <!-- Top Header section start -->
 
-  <div class="container-fluid mt-1 top_header_section">
+  <div class="container-fluid mt-3 top_header_section">
     <div class="top_header">
       <div class="row">
-        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+        <div class="col-4 col-sm-4 col-md-4  col-lg-4">
           <div class="header_contact">
             <div class="">
               <img src="assets/images/call-icon.png" alt="" srcset="" />
@@ -52,13 +52,13 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 header_logo">
+        <div class="col-4 col-sm-4 col-md-4  col-lg-4 header_logo">
           <div class="logo">
             <img src="assets/images/logo.png" alt="" srcset="" />
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+        <div class="col-4 col-sm-4 col-md-4  col-lg-4">
           <div class="social">
             <img src="assets/images/fb.png" alt="" class="social_icon" />
             <img src="assets/images/instagram.png" alt="" class="social_icon" />
@@ -187,7 +187,12 @@
   <div class="container" data-aos="fade-up" data-aos-duration="700">
     <div class="about_section">
       <div class="row">
-        <div class="col-lg-7 col-md-7 col-sm-8">
+        <div class="col-lg-5 col-md-12 col-12 order-md-2">
+          <div class="about_img">
+            <img src="assets/images/about-pic.png" alt="" />
+          </div>
+        </div>
+        <div class="col-lg-7 col-md-12 col-12">
           <div class="separator">
             <h3>Benvenuti al</h3>
             <div class="line"></div>
@@ -216,11 +221,7 @@
             summer dine in and takeaway evenings.
           </p>
         </div>
-        <div class="col-lg-5 col-md-5 col-sm-4">
-          <div class="about_img">
-            <img src="assets/images/about-pic.png" alt="" />
-          </div>
-        </div>
+
       </div>
       <!-- About us end here -->
     </div>
@@ -234,20 +235,20 @@
           </div>
           <div class="pb-5">
             <div class="row">
-              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+              <div class="col-lg-4 col-md-12 col-sm-12 col-12 mb-2">
                 <div class="left_menu">
                   <img src="assets/images/antipasti.png" alt="" srcset="" class="left_menu_img" data-aos="zoom-in"
                     data-aos="fade-up" data-aos-anchor-placement="top-bottom" offset=" 200" duration="600"
                     easing="ease-in">
-                  <div class="menu_footer1">
+                  <div class="menu_footer_icon1">
                     <div class="row">
-                      <div class="col-10">
+                      <div class="col-9">
                         <p class="title">Antipasti e Insalate</p>
                       </div>
-                      <div class="col-2 arrow_footer1">
+                      <div class="col-3 text-right">
                         <div class="arrow_div">
                           <a href="/menu.html">
-                            <img src="assets/images/arrow1.png" class="arrow" alt="" />
+                            <img src="assets/images/arrow1.png" alt="" />
                           </a>
                         </div>
                       </div>
@@ -256,21 +257,23 @@
                 </div>
               </div>
 
-              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+              <div class="col-lg-4 col-md-12 col-12 col-12 d_set">
                 <div class="first_menu">
                   <img src="assets/images/pasta.png" alt="" srcset="" data-aos="zoom-out" data-aos="fade-up"
                     data-aos-anchor-placement="top-bottom" offset=" 200" duration="700" easing="ease-in" />
-                  <div class="menu_footer">
-                    <div class="col-10">
-                      <p class="title">Pasta e Risotto</p>
-                    </div>
-                    <div class="col-2">
-                      <div class="arrow_div">
-                        <a href="/menu.html">
+                  <div class="menu_footer_icon">
+                    <div class="row">
+                      <div class="col-9">
+                        <p class="title">Pasta e Risotto</p>
+                      </div>
+                      <div class="col-3 text-right">
+                        <div class="arrow_div">
+                          <a href="/menu.html">
 
 
-                          <img src="assets/images/arrow1.png" class="arrow1" alt="" />
-                        </a>
+                            <img src="assets/images/arrow1.png" alt="" />
+                          </a>
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -278,38 +281,42 @@
                 <div class="second_menu">
                   <img src="assets/images/secondi.png" alt="" srcset="" data-aos="zoom-in" data-aos="fade-up"
                     data-aos-anchor-placement="top-bottom" offset=" 200" duration="800" easing="ease-in" />
-                  <div class="menu_footer">
-                    <div class="col-10">
-                      <p class="title">Secondi Piatti</p>
-                    </div>
-                    <div class="col-2">
-                      <div class="arrow_div">
-                        <a href="/menu.html">
+                  <div class="menu_footer_icon">
+                    <div class="row">
+                      <div class="col-9">
+                        <p class="title">Secondi Piatti</p>
+                      </div>
+                      <div class="col-3 text-right">
+                        <div class="arrow_div">
+                          <a href="/menu.html">
 
 
-                          <img src="assets/images/arrow1.png" class="arrow1" alt="" />
-                        </a>
+                            <img src="assets/images/arrow1.png" alt="" />
+                          </a>
+                        </div>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
 
-              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+              <div class="col-lg-4 col-md-12 col-12 col-12 d_set">
                 <div class="first_menu">
                   <img src="assets/images/pizza.png" alt="" srcset="" data-aos="fade-up" data-aos="fade-up"
                     data-aos-anchor-placement="top-bottom" offset=" 200" duration="900" easing="ease-in" />
-                  <div class="menu_footer">
-                    <div class="col-10">
-                      <p class="title">Pizza</p>
-                    </div>
-                    <div class="col-2">
-                      <div class="arrow_div">
-                        <a href="/menu.html">
+                  <div class="menu_footer_icon">
+                    <div class="row">
+                      <div class="col-9">
+                        <p class="title">Pizza</p>
+                      </div>
+                      <div class="col-3 text-right">
+                        <div class="arrow_div">
+                          <a href="/menu.html">
 
 
-                          <img src="assets/images/arrow1.png" class="arrow1" alt="" />
-                        </a>
+                            <img src="assets/images/arrow1.png" alt="" />
+                          </a>
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -317,17 +324,19 @@
                 <div class="second_menu">
                   <img src="assets/images/dolci.png" alt="" srcset="" data-aos="fade-flip" data-aos="fade-up"
                     data-aos-anchor-placement="top-bottom" offset=" 200" duration="600" easing="ease-in" />
-                  <div class="menu_footer">
-                    <div class="col-10">
-                      <p class="title">Dolci</p>
-                    </div>
-                    <div class="col-2">
-                      <div class="arrow_div">
-                        <a href="/menu.html">
+                  <div class="menu_footer_icon">
+                    <div class="row">
+                      <div class="col-9">
+                        <p class="title">Dolci</p>
+                      </div>
+                      <div class="col-3 text-right">
+                        <div class="arrow_div">
+                          <a href="/menu.html">
 
 
-                          <img src="assets/images/arrow1.png" class="arrow1" alt="" />
-                        </a>
+                            <img src="assets/images/arrow1.png" alt="" class="img-fluid" />
+                          </a>
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -346,10 +355,10 @@
     <div class="contact_form " id="contact_form">
       <h1 class="contact_heading text-center">Contact Us</h1>
       <div class="row">
-        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-          <img src="assets/images/contact.png" alt="" class="contact_img" />
+        <div class="col-lg-6 col-md-12 col-sm-12 col-12">
+          <!-- <img src="assets/images/contact.png" alt="" class="contact_img" /> -->
 
-          <div class="form">
+          <div class=" form_bg">
             <div class="form-group">
               <span><i class="fa fa-user" aria-hidden="true"></i> </span>
 
@@ -373,7 +382,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <div class="col-lg-6 col-md-12 col-sm-12 col-12">
 
           <div class="full_map">
             <iframe
@@ -398,7 +407,7 @@
   <section>
     <div class="testimonials_section">
 
-      <img src="assets/images/testimonials.png" alt="" srcset="" class="testimonial_banner">
+      <!-- <img src="assets/images/testimonials.png" alt="" srcset="" class="testimonial_banner"> -->
       <div class="testimonial_body">
         <h1 class="testimonials_heading">Testimonials</h1>
         <div class="slide-container swiper">
@@ -781,13 +790,13 @@
   <div class="footer_section">
     <footer class="container">
       <div class="row">
-        <div class="col-lg-4 col-md-4">
+        <div class="col-lg-4 col-md-6">
           <div class="vertical_line">
             <span class="line"></span>
             <p class="footer_heading">Links</p>
             <div class="row">
               <div class="col-lg-6 col-md-6">
-                <ul>
+                <ul class="mb-0">
                   <li>
                     <span class="mr-1"><img src="assets/images/back.png" class="footer_back_icon" alt="" /></span><a
                       href="#home">Home</a>
@@ -821,7 +830,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-md-3">
+        <div class="col-lg-3 col-md-6">
           <div class="vertical_line">
             <span class="line"></span>
             <p class="footer_heading">Address</p>
@@ -838,7 +847,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-md-3">
+        <div class="col-lg-3 col-md-6">
           <div class="vertical_line">
             <span class="line"></span>
             <p class="footer_heading">Contact Us</p>
@@ -861,7 +870,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-2 col-md-2">
+        <div class="col-lg-2 col-md-6">
           <span class="line"></span>
           <p class="footer_heading">Opening Hours</p>
           <div class="row">
@@ -896,6 +905,7 @@
 
     </footer>
   </div>
+
 
 
   <!-- Optional JavaScript -->
@@ -953,7 +963,14 @@
         520: {
           slidesPerView: 1,
         },
+        768: {
+          slidesPerView: 2,
+        },
         950: {
+          slidesPerView: 2,
+        },
+        1024:
+        {
           slidesPerView: 3,
         }
       }
